# django_htmx_unicorn

./: .gitignore  Pipfile  Procfile  fly.toml  manage.py  pyproject.toml
django_htmx_unicorn/: asgi.py  settings.py  urls.py  wsgi.py
tetris_htmx/: apps.py  tetris.py  tetrominoes.py  urls.py  views.py
tetris_htmx/static/tetris_htmx/css/: base.css
tetris_htmx/static/tetris_htmx/js/: tetris_htmx.js
tetris_htmx/templates/: base_generic.html  index.html  play_area.html
tetris_htmx/templatetags/: tetris_htmx_tags.py
tetris_unicorn/: apps.py  urls.py  views.py
tetris_unicorn/components/: board.py
tetris_unicorn/templates/: index_unicorn.html
tetris_unicorn/templates/unicorn/: board.html
tetris_unicorn/templatetags/: tetris_unicorn_tags.py
